feat(permission): set and delete
