# assets/swagger/swagger.yml
@@ -27,13 +27,18 @@ definitions:
       user_id:
         description: Идентификаторы пользователей
         type: integer
-        example: 1
+        example: 6
       actions:
         description: Действия, разрешенные пользователю
         type: array
         items:
           type: string
-        example: [action1, action2]
+        example: [GET:/graphs]
+  arrayOfPermissions:
+    type: array
+    items:
+      $ref: '#/definitions/permission'
+      example: [{user_id: 6, actions: ["GET:/graphs"]}]
 
 tags:
   - name: graphs
@@ -52,8 +57,6 @@ paths:
       description: |
         Для пользователей с типом:
         `admin`
-        `service`
-        Требуется подписка.
       parameters:
         - name: user_ids
           description: Идентификаторы пользователей
@@ -71,9 +74,70 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/permission"
+            $ref: "#/definitions/arrayOfPermissions"
         "400":
           description: Bad request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal server error
+          
+    post:
+      summary: Определение прав пользователей на определенные действия
+      tags:
+        - permissions
+      security:
+        - authorization_header: []
+      description: |
+        Для пользователей с типом:
+        `admin`
+      parameters:
+        - name: permission
+          description: Права пользователя на определенные действия
+          in: body
+          schema:
+            $ref: "#/definitions/arrayOfPermissions"
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "409":
+          description: Conflict
+        "500":
+          description: Internal server error
+
+    delete:
+      summary: Удаление прав пользователей на определенные действия
+      tags:
+        - permissions
+      security:
+        - authorization_header: []
+      description: |
+        Для пользователей с типом:
+        `admin`
+      parameters:
+        - name: user_ids
+          description: Идентификаторы пользователей
+          in: query
+          type: array
+          items:
+            type: integer
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "500":
           description: Internal server error
 
